Initial commit: E-Commerce Product Management API